--- a/index.html
+++ b/index.html
@@ -7,25 +7,21 @@
   </head>
   <body>
     <h1>File Upload</h1>
-    <form id="uploadForm" onsubmit="handleSubmit(event); return false;">
-      <div>
-        <label for="paymentFile">Payment File:</label>
-        <input type="file" id="paymentFile" name="payment_file" required />
-      </div>
-      <div>
-        <label for="jsonFile">JSON File:</label>
-        <input type="file" id="jsonFile" name="json_file" required />
-      </div>
-      <button type="submit">Upload Files</button>
-    </form>
-
-    <div id="result"></div>
-
+    <div>
+      <label for="paymentFile">Payment File:</label>
+      <input type="file" id="paymentFile" name="payment_file" required />
+    </div>
+    <div>
+      <label for="jsonFile">JSON File:</label>
+      <input type="file" id="jsonFile" name="json_file" required />
+    </div>
+    <button id="uploadButton" type="button">Upload Files</button>
+    <pre id="result"></pre>
     <script>
-      async function handleSubmit(e) {
-        e.preventDefault();
+      document.getElementById("uploadButton").addEventListener("click", handleSubmit);
 
-        // Your existing code here
+      async function handleSubmit(e) {
+        e.preventDefault();  // Prevent the default form submission
 
         const formData = new FormData();
         formData.append(
@@ -44,6 +40,9 @@
           });
 
           const data = await response.json();
+
+          console.log("DATA HERE", data);
+
           document.getElementById("result").innerText = JSON.stringify(
             data,
             null,
@@ -54,7 +53,6 @@
           document.getElementById("result").innerText =
             "An error occurred while uploading the files.";
         }
-        return false;
       }
     </script>
   </body>
